--- a/index.html
+++ b/index.html
@@ -4,26 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
- 
-
+  <audio autoplay>
+    <source src="music/Extreme-Sport-Trap-Music-PISTA.mp3" type="audio/wav" />
+  </audio>
+  
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 
 
-<div class="demo-wrap">
-  <div class="demo-content">
-
 <body>
+
+  <div class="demo-wrap">
+    <div class="demo-content">
+
 <div class="homescreen">
 <h1 id="demo" class="neonText">Welcome to Rock, Paper, Scissors.</h1>
-<p></p>
 <input type="text" id="playerName" value="Enter your Name...">
 <button class="start-button" onclick="loadPlayer()" >Start Game</button>
 
 <script>
 function loadPlayer() {
-  playerName = document.getElementById('playerName').value;
+
+ playerName = document.getElementById('playerName').value;
   document.getElementById("demo").innerHTML = `${playerName} is playing the computer`;
   playerScoreElem.innerHTML = `${playerName}:0`;
 }
@@ -35,7 +38,7 @@ function loadPlayer() {
 
 <div class="scoreboard">
   <div class="neonText" >
-    <div class="player-score" id="playerScore" >Player: 0
+    <div class="player-score" id="playerScore" >Player 1: 0
   </div>
   </div>
   <div class="neonText" >
@@ -62,8 +65,7 @@ function loadPlayer() {
 </div>
 
 <button class="play-again" id="play-again">Play Again</button>
-
-
+s
 </div>
 </div>
 
