--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div class="homescreen">
 <h1 id="demo" class="neonText">Welcome to Rock, Paper, Scissors.</h1>
-<input type="text" id="playerName" value="Enter your Name...">
+<input type="text" id="playerName" value="">
 <button class="start-button" onclick="loadPlayer()" >Start Game</button>
 
 <script>
